--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div id="quiz-page">
         <button id="back-to-start">
-            back to start
+            back to start, but come on, that's cheating
         </button>
     </div>
     <script src="./assets/js/script.js"></script>
