got question and choices to render

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body id="body">
     <div id="opening-page">
-        <div id="view-high-scores">
+        <button id="view-high-scores">
             <p>Click Here to view the High scores!</p>
-        </div>
+        </button>
         <div id="title-container">
             <div id="title-blurb">
                 <h1>Welcome to the JavaScript Speed Quiz!!</h1>
@@ -28,8 +28,20 @@
         <button id="back-to-start">
             back to start, but come on, that's cheating
         </button>
+        <div class="question-div">
+            <div class="question-box">
+                <div class="question"></div>
+                <div class="choices">
+                    <div class="choice choice1"></div>
+                    <div class="choice choice2"></div>
+                    <div class="choice choice3"></div>
+                    <div class="choice choice4"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="./assets/js/script.js"></script>
+
 </body>
 <body>
     
