--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <div class="question-div">
             <div class="question-box">
                 <div class="question"></div>
-                <div class="choices">
-                    <div class="choice choice1"></div>
-                    <div class="choice choice2"></div>
-                    <div class="choice choice3"></div>
-                    <div class="choice choice4"></div>
+                <div id="choices">
+                    
+                </div>
+                <div id="next-button-box">
+                    <button id="next-button">Next Question</button>
                 </div>
             </div>
         </div>
