make it so questions can only be answered once, next-question button only appears after an answer, and third page is now initialized

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             </div>
         </div>
     </div>
+    <div id="post-quiz-page">
+        <div id="current-score">
+            current score displayed here
+        </div>
+    </div>
     <script src="./assets/js/script.js"></script>
 
 </body>
