finally used local storage to begin displaying scores on post-quiz page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button id="back-to-start">
             back to start, but come on, that's cheating
         </button>
+        <div id="timer"></div>
         <div class="question-div">
             <div class="question-box">
                 <div class="question"></div>
@@ -41,8 +42,11 @@
         </div>
     </div>
     <div id="post-quiz-page">
+        <div id="post-quiz-timer"></div>
         <div id="current-score">
-            current score displayed here
+            <h1 id="post-quiz-score-header">You're done! here's your results</h1>
+            <p id="correct-answers-score"></p>
+            <p id="incorrect-answers-score"></p>
         </div>
     </div>
     <script src="./assets/js/script.js"></script>
