made it so you cant have a timer score below zero. still needs work though

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <h1 id="post-quiz-score-header">You're done! here's your results</h1>
             <p id="correct-answers-score"></p>
             <p id="incorrect-answers-score"></p>
+            <p id="percentage-score"></p>
+            <p id="time-remaining"></p>
+            <p id="final-score"></p>
         </div>
     </div>
     <script src="./assets/js/script.js"></script>
