finally got correct answer to highlight after user makes a choice

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div id="timer"></div>
         <div class="question-div">
             <div class="question-box">
-                <div class="question"></div>
+                <div class="question">question</div>
                 <div id="choices">
-                    
+                    choice
                 </div>
                 <div id="next-button-box">
                     <button id="next-button">Next Question</button>
@@ -45,13 +45,19 @@
         <div id="post-quiz-timer"></div>
         <div id="current-score">
             <h1 id="post-quiz-score-header">You're done! here's your results</h1>
-            <p id="correct-answers-score"></p>
-            <p id="incorrect-answers-score"></p>
-            <p id="percentage-score"></p>
-            <p id="time-remaining"></p>
-            <p id="final-score"></p>
+            <p id="correct-answers-score">correct answers</p>
+            <p id="incorrect-answers-score">incorrect answers</p>
+            <p id="percentage-score">percentage</p>
+            <p id="time-remaining">time remaining</p>
+            <p id="final-score">final score</p>
         </div>
-    </div>
+        <form id="initials-form">
+            <textarea id="initials-text-box" placeholder="Enter your initials here" ></textarea>
+            <div>
+                <button id="submit-button">Submit</button>
+            </div>
+        </form>
+    
     <script src="./assets/js/script.js"></script>
 
 </body>
