got the scores to go into a table

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body id="body">
     <div id="opening-page">
-        <button id="view-high-scores">
+        <!-- <button id="view-high-scores">
             <p>Click Here to view the High scores!</p>
-        </button>
+        </button> -->
         <div id="title-container">
             <div id="title-blurb">
                 <h1>Welcome to the JavaScript Speed Quiz!!</h1>
@@ -62,7 +62,7 @@
             <p id="final-score">final score</p>
         </div>
         <div id="enter-initals">
-            <h3 id="initials-header">Enter your initials below to have your score logged in the record book!</h3>
+            <h3 id="initials-header">Enter your initials below to see the high scores and to have your score logged in the record book!</h3>
             <form id="initials-form">
                 <input type="text" rows="1" width=50px id="initials-text-box" placeholder="" ></input>
                 <button id="submit-button">Submit</button>
