pre tutor session commit

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </button> -->
         <div id="title-container">
             <div id="title-blurb">
-                <h1>Welcome to the JavaScript Speed Quiz!!</h1>
-                <p>This quiz is designed to make you sweat. Not only will your knowledge be put to the test, but you'll be timed as well!  The percentage of questions you get right will be multiplied by the time you are left with at the end! Incorrect answers will deduct 5 seconds from the time remaining, which makes them DOUBLE PUNISHING!. Good Luck!
+                <h1>Welcome to the JavaScript Speed Quiz by Mike Seaman!!</h1>
+                <p>This quiz is designed to make you sweat. Not only will your knowledge be put to the test, but you'll be timed as well!  The percentage of questions you get right will be multiplied by the time you are left with at the end! Incorrect answers will deduct 5 seconds from the time remaining, which makes them DOUBLE PUNISHING!. If the timer reaches zero, the test will end and you will have a final score of 0. Good Luck!
                 </p>
             </div>
             <button id="start-quiz-button">
