first draft of readme and did some commenting

--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body id="body">
+    <!-- Opening Page -->
     <div id="opening-page">
-        <!-- <button id="view-high-scores">
-            <p>Click Here to view the High scores!</p>
-        </button> -->
         <div id="title-container">
             <div id="title-blurb">
                 <h1>Welcome to the JavaScript Speed Quiz by Mike Seaman!!</h1>
                 <p>This quiz is designed to make you sweat. Not only will your knowledge be put to the test, but you'll be timed as well!  The percentage of questions you get right will be multiplied by the time you are left with at the end! Incorrect answers will deduct 5 seconds from the time remaining, which makes them DOUBLE PUNISHING!. If the timer reaches zero, the test will end and you will have a final score of 0. Good Luck!
                 </p>
             </div>
-            <button id="test">View High Scores</button>
+            <button id="high-scores-button")>View High Scores</button>
             <button id="start-quiz-button">
                 START QUIZ
             </button>
             
         </div>
-        
     </div>
+    <!-- Quiz Page -->
     <div id="quiz-page">
         <button id="back-to-start">
             back to start, but come on, that's cheating
@@ -36,7 +34,7 @@
         </div>
         <div class="question-div">
             <div class="question-box">
-                <div class="question">question</div>
+                <div class="question">question</div>  <!--Some of these items have placeholder values for styling purposes-->
                 <div id="choices">
                     <div class="choice">choice</div>
                 </div>
@@ -49,6 +47,7 @@
             </div>
         </div>
     </div>
+    <!-- post quiz page -->
     <div id="post-quiz-page">
         <button id="view-high-scores-post">Click Here to view the High scores!</button>
         <h2 id="post-timer-header">Timer:</h2>
@@ -71,6 +70,7 @@
             </form>
         </div>
      </div> 
+     <!-- high scores page -->
      <div id="high-scores-page">
         <H1>Here are the all-time high scores!!</H1>
         <div id="high-scores-div"></div>
